--- a/index.html
+++ b/index.html
@@ -65,29 +65,29 @@
         <img src="img/Logo.png" alt="alura+" class="rodape__logo">
         <ul class="rodape__lista">
             <li class="lista__link">
-                <a href="#">Idioma</a>
+                <a class="link" href="#">Idioma</a>
             </li>
             <li class="lista__link">
-                <a href="#">dispositivos compatíveis</a>
+                <a class="link" href="#">dispositivos compatíveis</a>
             </li>
             <li class="lista__link">
-                <a href="#">Contrato de assinatura</a>
+                <a class="link" href="#">Contrato de assinatura</a>
             </li>
             <li class="lista__link">
-                <a href="#">Politica de privacidade</a>
+                <a class="link" href="#">Politica de privacidade</a>
             </li>
             <li class="lista__link">
-                <a href="#">Proteção de dados no Brasil</a>
+                <a class="link" href="#">Proteção de dados no Brasil</a>
             </li>
             <li class="lista__link">
-                <a href="#">Anuncios personalizados</a>
+                <a class="link" href="#">Anuncios personalizados</a>
             </li>
             <li class="lista__link">
-                <a href="#">Ajuda</a>
+                <a class="link" href="#">Ajuda</a>
             </li>
         </ul>
-            <p class="rodape__texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
-            <p class="rodape__texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+        <p class="rodape__texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+        <p class="rodape__texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
     </footer>
    
 </body>
