--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
             </li>
         </ul>
     </section>
+   
+    <section>
+        <h3>teste</h3>
+        
+    </section>
+
 
     <footer class="rodape">
         <img src="img/Logo.png" alt="alura+" class="rodape__logo">
